# rust-project-template

./: .gitpod.yml  Cargo.toml  Makefile  Makefile.toml  README.md  README.template.md  cargo-generate.toml  post.rhai  pre.rhai  test-template.sh
.github/: dependabot.yml
.github/workflows/: test.yml
bins/cli/: Cargo.toml
bins/cli/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/test/: cli.rs
cli/tests/: cli.rs
lib/: Cargo.toml
lib/src/: lib.rs
libs/lib-a/: Cargo.toml
libs/lib-a/src/: lib.rs
libs/lib-b/src/: lib.rs
template/: .gitpod.Dockerfile  Cargo.toml  README.md
template/.github/: dependabot.yml
template/.github/workflows/: coverage.yml  test.yml
template/bins/cli/: Cargo.toml
template/bins/cli/tests/: cli.rs
template/libs/lib-a/: Cargo.toml
template/libs/lib-b/: Cargo.toml
template/libs/lib-b/src/: lib.rs
templates/: Makefile.toml
workflows/: test.yml
