[package]
name = "{{project-name}}"
description = "{{description}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
workspace = ".."

[[bin]]
name="{{project-name}}"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{{project-name}}-lib = { path = "../lib", version = "0.1.0"  }

anyhow = "~1.0"

log = "~0.4"
loggerv = "~0.7"
ansi_term = "~0.12"

lazy_static = "~1.4"

clap-verbosity-flag = "~0.3"
structopt = "~0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"