[package]
name = "{{project-name}}-lib-a"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "~1.0"

log = "~0.4"
