[package]
name = "{{project-name}}"
description = "{{description}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."

[[bin]]
name="{{project-name}}"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{{project-name}}-lib-a = { path = "../../libs/lib-a", version = "0.1.0"  }
{{project-name}}-lib-b = { path = "../../libs/lib-b", version = "0.1.0"  }

anyhow = "~1.0"

log = "~0.4"
loggerv = "~0.7"
ansi_term = "~0.12"

clap-verbosity-flag = "~2.0"
clap = { version = "~4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"