[package]
name = "{{project-name}}"
description = "{{description}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."

[[bin]]
name="{{project-name}}"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

{{project-name}}-lib-a = { path = "../../libs/lib-a", version = "0.1.0"  }
{{project-name}}-lib-b = { path = "../../libs/lib-b", version = "0.1.0"  }

clap = { version = "~4.2", features = ["derive"] }
clap-verbosity-flag = "~2.0"

anyhow = "~1.0"

loggerv = "~0.7"
ansi_term = "~0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
